--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,9 @@ h2 {
 }
 a {
   text-decoration: none;
-  color: #000;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 .current-city {
@@ -55,4 +57,8 @@ a {
   position: relative;
   top: -20px;
   left: -10px;
+}
+.footer {
+  font-size: 12px;
+  text-align: center;
 }
