--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,9 @@ a:hover {
   text-align: center;
   font-weight: bold;
 }
+.description::first-letter {
+  text-transform: capitalize;
+}
 
 .future-weather {
   padding: 50px 0 0 0;
