--- a/src/styles.css
+++ b/src/styles.css
@@ -20,13 +20,13 @@ a:hover {
 .weather-app {
   border: 2px solid #000;
   border-radius: 20px;
-  max-width: 900px;
+  max-width: 800px;
   display: block;
   margin: 100px auto;
   padding: 40px;
   font-family: "Mali", cursive;
   background-image: url("../images/cloud-background.jpg");
-  background-size: 900px;
+  background-size: 800px;
 }
 
 .forecast {
@@ -65,4 +65,7 @@ a:hover {
 .footer {
   font-size: 12px;
   text-align: center;
+  font-family: "Mali", cursive;
+  position: relative;
+  top: -70px;
 }
