--- a/src/styles.css
+++ b/src/styles.css
@@ -1,36 +1,46 @@
 h1 {
-  font-size: 40px;
+  font-size: 50px;
   font-weight: bold;
 }
 h2 {
   font-size: 16px;
   position: relative;
-  bottom: -16px;
+  bottom: -8px;
+  font-weight: bold;
 }
 a {
   text-decoration: none;
 }
 a:hover {
-  text-decoration: underline;
+  text-decoration: rgb(2, 2, 91);
 }
-.current-city {
-  font-size: 11px;
+
+.search-engine {
+  margin: 0 0 30px 0;
 }
+
 .weather-app {
   border: 2px solid #000;
   border-radius: 20px;
   max-width: 800px;
   display: block;
   margin: 100px auto;
-  padding: 70px 50px;
+  padding: 60px 60px 30px 60px;
   font-family: "Mali", cursive;
   background-image: url("../images/cloud-background.jpg");
-  background-size: 800px;
+  background-size: 900px;
 }
-
+.current-city-button {
+  font-size: 11px;
+}
 .weather-data {
   position: relative;
-  bottom: -34px;
+  bottom: -30px;
+}
+
+.current-date {
+  text-align: center;
+  margin: 20px 0 0 0;
 }
 
 .today-symbol {
@@ -56,13 +66,14 @@ a:hover {
 .temp-scale {
   font-size: 15px;
   position: relative;
-  top: -20px;
+  top: -12px;
   left: -10px;
 }
 .temp-scale .active {
   color: #000;
   text-decoration: none;
   cursor: default;
+  font-size: 25px;
 }
 .future-weather {
   padding: 70px 0 0 0;
