--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,9 @@ a:hover {
   text-decoration: rgb(2, 2, 91);
 }
 
+body {
+  background-size: cover;
+}
 .search-engine {
   margin: 0 0 30px 0;
 }
@@ -22,13 +25,12 @@ a:hover {
 .weather-app {
   border: 2px solid #000;
   border-radius: 20px;
-  max-width: 800px;
+  max-width: 900px;
   display: block;
   margin: 100px auto;
-  padding: 60px 60px 30px 60px;
+  padding: 70px 60px 40px 60px;
   font-family: "Mali", cursive;
-  background-image: url("../images/cloud-background.jpg");
-  background-size: 900px;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 .current-city-button {
   font-size: 11px;
@@ -40,7 +42,8 @@ a:hover {
 
 .current-date {
   text-align: center;
-  margin: 20px 0 0 0;
+  margin: 30px 0 0 0;
+  font-weight: bold;
 }
 
 .today-symbol {
@@ -79,8 +82,9 @@ a:hover {
   padding: 70px 0 0 0;
 }
 .footer {
-  font-size: 12px;
+  font-size: 14px;
   text-align: center;
+  font-weight: bold;
   font-family: "Mali", cursive;
   position: relative;
   top: -70px;
