--- a/src/styles.css
+++ b/src/styles.css
@@ -75,6 +75,11 @@ body {
 .future-weather {
   padding: 70px 0 0 0;
 }
+
+.card-text {
+  font-size: 12px;
+  font-weight: bold;
+}
 .current-date {
   text-align: center;
   margin: 30px 0 10px 0;
